--- a/password123test/Config/DefaultEngine.ini
+++ b/password123test/Config/DefaultEngine.ini
@@ -4,8 +4,8 @@
 UseAudioMixer=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/StarterMap.StarterMap
-GameDefaultMap=/Game/StarterContent/Maps/StarterMap.StarterMap
+EditorStartupMap=/Game/NewMap.NewMap
+GameDefaultMap=/Game/NewMap.NewMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
