--- a/password123test/Config/DefaultInput.ini
+++ b/password123test/Config/DefaultInput.ini
@@ -77,6 +77,13 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
++AxisMappings=(AxisName="Forward_and_backwards",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Forward_and_backwards",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Right_and_Left",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Right_and_Left",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="Horizantal",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=MouseY)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
