--- a/password123test/Config/DefaultInput.ini
+++ b/password123test/Config/DefaultInput.ini
@@ -84,6 +84,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Right_and_Left",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Horizantal",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=MouseY)
++AxisMappings=(AxisName="Punch",Scale=1.000000,Key=LeftMouseButton)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
